# boardminutes

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt  wsgi.py
.github/workflows/: deploy-pages.yml  tests.yml  update-board-data.yml
data/: schools.csv
docs/: app.js  index.html  index.rsc  investigate.rsc  parser-worker.js  review.rsc  schools.rsc  styles.css  trends.rsc
docs/app/: app.js
docs/assets/: BoardWatchApp-C25RxyAj.js  BoardWatchApp-CA31Ayoa.js  BoardWatchApp-DVcQXICc.js  TrendsPage-CZ5YgjNB.js  TrendsPage-Cl0G5pF4.js  TrendsPage-kZqUeP1V.js  data-B7UP4Tsj.js  data-BO5I7wu3.js  data-CkZlCznt.js  index-03wDG60U.css  index-B3tsHBX5.js  index-BOqRefLv.css  index-D3yCM7cJ.js  index-DIUDvwnT.js  layout-segment-context-B66t2OE0.js  layout-segment-context-cr4kimwf.js  layout-segment-context-gxYk4IcC.js
docs/data/: board-data.json  default-findings.json  default-schools.json  last-updated.txt
docs/investigate/: index.html
docs/review/: index.html
docs/schools/: index.html
docs/trends/: index.html
scripts/: build_macos_app.sh
src/ccsd_board_watch/: __init__.py  cli.py  desktop.py  diligent.py  matcher.py  models.py  pdf_text.py  scanner.py  schools.py  static_export.py  web.py
src/ccsd_board_watch/static/: app.css
src/ccsd_board_watch/templates/: index.html  schools.html  source.html
tests/: test_diligent.py  test_matcher.py  test_pdf_text.py  test_scanner.py  test_schools.py  test_static_export.py  test_web.py
